Convert MCP from stdio to HTTPS/REST API - Replace stdio with Flask HTTPS server - Add REST endpoints for tools - Enable CORS for browser access - Auto-fallback to local mode - Add Quick Start guide

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Modern E-Commerce Website with MCP Integration",
   "main": "index.html",
   "scripts": {
-    "mcp-server": "python mcp-server.py"
+    "mcp-server": "python mcp-server.py",
+    "start": "python mcp-server.py"
   },
   "dependencies": {},
   "devDependencies": {},
